# ai-pm

./: .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker.yml
apps/web/: .eslintrc.cjs  Dockerfile  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/app/console/: page.tsx
apps/web/src/app/health/: page.tsx
apps/web/src/app/projects/: ProjectsDashboard.tsx  page.tsx
apps/web/src/app/projects/[id]/intake/: ProjectIntakeWorkspace.tsx  page.tsx
apps/web/src/app/projects/[id]/personas/: ProjectPersonasManager.tsx  page.tsx
apps/web/src/app/projects/[id]/settings/: ProjectSettingsForm.tsx  page.tsx
apps/web/src/components/auth/: SignInOutButtons.tsx
apps/web/src/components/ui/: button.tsx
apps/web/src/lib/: api.ts
apps/web/src/lib/auth/: guards.ts  options.ts  roles.ts
apps/web/src/types/: next-auth.d.ts
infra/docker/: docker-compose.yml
infra/docker/loki/: loki-local-config.yaml
infra/docker/tempo/: tempo.yaml
infra/docker/temporal/dynamicconfig/: docker.yaml
libs/py/common/: pyproject.toml
libs/py/common/ai_pm_common/: __init__.py
libs/py/common/common/: __init__.py
libs/py/common/common/models/: __init__.py  org.py  project.py  user.py
libs/py/common/common/utils/: __init__.py  logging.py
ops/: .env.example  makefile
services/api/: Dockerfile  Makefile  alembic.ini  app.db  inspect_projects.py  pyproject.toml
services/api/app/: __init__.py  config.py  main.py
services/api/app/api/: __init__.py
services/api/app/api/dependencies/: auth.py
services/api/app/api/v1/: __init__.py  auth.py  conversations.py  health.py  intake.py  personas.py  projects.py  requirements.py
services/api/app/db/: __init__.py  base.py  models.py
services/api/app/db/migrations/: env.py  script.py.mako
services/api/app/db/migrations/versions/: 0001_initial.py  0002_personas.py  0002_requirements_conversation_turns.py  0003_requirements_conversation_turns.py  0004_projects_confidence.py  0005_projects_extended_fields.py  0006_remove_project_planning_fields.py
services/api/app/db/models/: __init__.py  base.py  client.py  conversation_turn.py  enums.py  organization.py  persona.py  project.py  requirement.py  user.py
services/api/app/telemetry/: __init__.py  otel.py
services/api/tests/: conftest.py  test_health.py  test_intake.py  test_projects.py  test_requirements.py
services/worker/: Dockerfile  Makefile  pyproject.toml  run_worker.py
services/worker/tests/: test_demo_workflow.py
services/worker/worker/: __init__.py  settings.py  telemetry.py
services/worker/worker/activities/: __init__.py  demo_activity.py
services/worker/worker/workflows/: __init__.py  demo_workflow.py
