[tool.poetry]
name = "ai-pm-worker"
version = "0.1.0"
description = "Temporal worker service for the ai-pm platform"
authors = ["ai-pm Platform <dev@example.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.11"
temporalio = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
